[gd_scene load_steps=30 format=2]

[ext_resource path="res://levels/profile/profile.gd" type="Script" id=1]
[ext_resource path="res://levels/commons/assets/fondmain.png" type="Texture" id=2]
[ext_resource path="res://levels/commons/assets/mainTitle.png" type="Texture" id=3]
[ext_resource path="res://levels/commons/assets/backbutton.png" type="Texture" id=4]
[ext_resource path="res://levels/commons/assets/backbuttonhover.png" type="Texture" id=5]
[ext_resource path="res://levels/commons/themes/mainTitleTheme.tres" type="Theme" id=6]
[ext_resource path="res://levels/commons/assets/options.png" type="Texture" id=7]
[ext_resource path="res://levels/commons/assets/optionshover.png" type="Texture" id=8]
[ext_resource path="res://levels/commons/themes/leftAsidePanel.tres" type="Theme" id=9]
[ext_resource path="res://levels/profile/assets/iconstmp.png" type="Texture" id=10]
[ext_resource path="res://levels/commons/themes/labelSkillFont.tres" type="Theme" id=11]
[ext_resource path="res://levels/commons/themes/buttonAsideTheme.tres" type="Theme" id=12]
[ext_resource path="res://levels/commons/themes/rightPanel.tres" type="Theme" id=13]
[ext_resource path="res://levels/profile/assets/discotmp.png" type="Texture" id=14]
[ext_resource path="res://levels/commons/themes/mostPlayedCharaTitle.tres" type="Theme" id=15]
[ext_resource path="res://levels/commons/themes/mostPlayedCharaName.tres" type="Theme" id=16]
[ext_resource path="res://levels/profile/assets/gradientTitle.png" type="Texture" id=17]
[ext_resource path="res://levels/commons/themes/scrollContainer.tres" type="Theme" id=18]
[ext_resource path="res://levels/commons/fonts/montserrat/Montserrat-SemiBold.otf" type="DynamicFontData" id=19]
[ext_resource path="res://levels/commons/anim/sceneFadeIn.tres" type="Animation" id=20]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 800, 72 )

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )
Panel/styles/panelf = null
Panel/styles/panelnc = null

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=4]
Panel/styles/panel = SubResource( 3 )
Panel/styles/panelf = null
Panel/styles/panelnc = null

[sub_resource type="StreamTexture" id=5]
flags = 4

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 19 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )
Label/colors/font_color = Color( 0.933333, 0.168627, 0.486275, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="DynamicFont" id=8]
size = 13
font_data = ExtResource( 19 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )
Label/colors/font_color = Color( 0.94902, 0.831373, 0.337255, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 130

[node name="header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
size_flags_horizontal = 11
custom_constants/separation = 0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/header"]
margin_right = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/header/Control"]
anchor_right = 1.0
margin_bottom = 120.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="headerContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/header/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/header/Control/headerContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 85.0
custom_constants/separation = 50

[node name="back" type="TextureButton" parent="MarginContainer/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 65.0
grow_horizontal = 0
rect_min_size = Vector2( 80, 65 )
mouse_default_cursor_shape = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Multiplayer Selection" type="Label" parent="MarginContainer/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
margin_left = 130.0
margin_right = 854.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "Profile"
align = 1
valign = 1
uppercase = true

[node name="titleMargins" type="MarginContainer" parent="MarginContainer/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
visible = false
margin_left = 699.0
margin_right = 999.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_left = 150

[node name="options" type="TextureButton" parent="MarginContainer/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
margin_left = 904.0
margin_right = 984.0
margin_bottom = 65.0
rect_min_size = Vector2( 80, 65 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 9
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="main" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="profileContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/main"]
margin_left = 40.0
margin_top = 20.0
margin_right = 984.0
margin_bottom = 430.0

[node name="asidePanel" type="Panel" parent="MarginContainer/VBoxContainer/main/profileContainer"]
margin_right = 180.0
margin_bottom = 410.0
rect_min_size = Vector2( 180, 0 )
theme = ExtResource( 9 )

[node name="aside" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/asidePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="pseudoContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/asidePanel/aside"]
margin_right = 180.0
margin_bottom = 318.0
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 40
custom_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/asidePanel/aside/pseudoContainer"]
margin_left = 5.0
margin_top = 40.0
margin_right = 175.0
margin_bottom = 318.0
custom_constants/separation = 15

[node name="avatar" type="TextureRect" parent="MarginContainer/VBoxContainer/main/profileContainer/asidePanel/aside/pseudoContainer/VBoxContainer"]
margin_right = 170.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="nom" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/asidePanel/aside/pseudoContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 170.0
margin_bottom = 133.0
size_flags_vertical = 2
theme = ExtResource( 11 )
text = "Kentin"
align = 1
autowrap = true
uppercase = true

[node name="stat" type="Button" parent="MarginContainer/VBoxContainer/main/profileContainer/asidePanel/aside"]
margin_top = 322.0
margin_right = 180.0
margin_bottom = 364.0
size_flags_horizontal = 3
theme = ExtResource( 12 )
custom_constants/hseparation = 0
text = " STATS"
align = 0

[node name="succes" type="Button" parent="MarginContainer/VBoxContainer/main/profileContainer/asidePanel/aside"]
margin_top = 368.0
margin_right = 180.0
margin_bottom = 410.0
size_flags_horizontal = 3
theme = ExtResource( 12 )
text = " ACHIEVEMENTS"
align = 0

[node name="maininfoPanel" type="Panel" parent="MarginContainer/VBoxContainer/main/profileContainer"]
margin_left = 184.0
margin_right = 944.0
margin_bottom = 410.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 13 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="maininfo" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 730.0
margin_bottom = 380.0
size_flags_horizontal = 3
custom_constants/separation = 32

[node name="statistiques" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo"]
margin_right = 700.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques"]
margin_right = 700.0
margin_bottom = 130.0
size_flags_horizontal = 3
custom_constants/margin_bottom = 30

[node name="mostplayed" type="HBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/MarginContainer"]
margin_right = 700.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="championIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/MarginContainer/mostplayed"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="championContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/MarginContainer/mostplayed"]
margin_left = 120.0
margin_top = 6.0
margin_right = 700.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 5

[node name="most" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/MarginContainer/mostplayed/championContent"]
margin_right = 580.0
margin_bottom = 32.0
theme = ExtResource( 15 )
text = "Most played character"
uppercase = true

[node name="chara" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/MarginContainer/mostplayed/championContent"]
margin_top = 37.0
margin_right = 580.0
margin_bottom = 88.0
theme = ExtResource( 16 )
custom_colors/font_color = Color( 0.933333, 0.168627, 0.486275, 1 )
text = "Funky Franky"

[node name="historyTitle" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques"]
margin_top = 140.0
margin_right = 700.0
margin_bottom = 191.0
size_flags_horizontal = 3
theme = ExtResource( 16 )
text = "Match History"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques"]
margin_top = 201.0
margin_right = 700.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="titlePanel" type="Panel" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer"]
margin_right = 700.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
theme = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/titlePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -5.0
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10

[node name="titlesTable" type="HBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/titlePanel/MarginContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 695.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dates" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/titlePanel/MarginContainer/titlesTable"]
margin_right = 169.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 11 )
text = "Date"
align = 1
valign = 1
uppercase = true

[node name="personnages" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/titlePanel/MarginContainer/titlesTable"]
margin_left = 173.0
margin_right = 342.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 11 )
text = "Character"
align = 1
valign = 1
uppercase = true

[node name="ranks" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/titlePanel/MarginContainer/titlesTable"]
margin_left = 346.0
margin_right = 515.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 11 )
text = "Rank"
align = 1
valign = 1
uppercase = true

[node name="kills" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/titlePanel/MarginContainer/titlesTable"]
margin_left = 519.0
margin_right = 690.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 11 )
text = "Kills"
align = 1
valign = 1
uppercase = true

[node name="historyPanel" type="Panel" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer"]
margin_top = 39.0
margin_right = 700.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 18 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="historyContent" type="ScrollContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 690.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="historyBlocContent" type="HBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel/MarginContainer/historyContent"]
margin_right = 680.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dates" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel/MarginContainer/historyContent/historyBlocContent"]
margin_right = 167.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="Date2" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel/MarginContainer/historyContent/historyBlocContent/dates"]
visible = false
margin_right = 177.0
margin_bottom = 18.0
theme = ExtResource( 11 )
text = "01/02/2020 18:30"
align = 1
valign = 1
uppercase = true

[node name="characters" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel/MarginContainer/historyContent/historyBlocContent"]
margin_left = 171.0
margin_right = 338.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="Date2" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel/MarginContainer/historyContent/historyBlocContent/characters"]
visible = false
margin_right = 177.0
margin_bottom = 18.0
theme = ExtResource( 11 )
text = "Monsieur Disco"
align = 1
valign = 1
uppercase = true

[node name="ranks" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel/MarginContainer/historyContent/historyBlocContent"]
margin_left = 342.0
margin_right = 509.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="Date2" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel/MarginContainer/historyContent/historyBlocContent/ranks"]
visible = false
margin_right = 177.0
margin_bottom = 18.0
theme = ExtResource( 11 )
text = "2/20"
align = 1
valign = 1
uppercase = true

[node name="kills" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel/MarginContainer/historyContent/historyBlocContent"]
margin_left = 513.0
margin_right = 680.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="Date2" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/statistiques/VBoxContainer/historyPanel/MarginContainer/historyContent/historyBlocContent/kills"]
visible = false
margin_right = 177.0
margin_bottom = 18.0
theme = ExtResource( 11 )
text = "3"
align = 1
valign = 1
uppercase = true

[node name="succes" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo"]
visible = false
margin_right = 700.0
margin_bottom = 350.0
size_flags_vertical = 3

[node name="trophiesTitle" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/succes"]
margin_right = 700.0
margin_bottom = 51.0
theme = ExtResource( 16 )
text = "Trophies"

[node name="trophiesContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/succes"]
margin_top = 55.0
margin_right = 700.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/succes/trophiesContainer"]
margin_right = 700.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="champion" type="HBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/succes/trophiesContainer/VBoxContainer"]
visible = false
margin_right = 700.0
margin_bottom = 47.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/succes/trophiesContainer/VBoxContainer/champion"]
margin_right = 50.0
margin_bottom = 47.0
rect_min_size = Vector2( 50, 0 )
texture = SubResource( 5 )
expand = true
stretch_mode = 6

[node name="succes" type="VBoxContainer" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/succes/trophiesContainer/VBoxContainer/champion"]
margin_left = 60.0
margin_right = 333.0
margin_bottom = 47.0

[node name="titre" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/succes/trophiesContainer/VBoxContainer/champion/succes"]
margin_right = 273.0
margin_bottom = 26.0
theme = SubResource( 7 )
text = "T'es mauvais Jack !"

[node name="desc" type="Label" parent="MarginContainer/VBoxContainer/main/profileContainer/maininfoPanel/MarginContainer/maininfo/succes/trophiesContainer/VBoxContainer/champion/succes"]
margin_top = 30.0
margin_right = 273.0
margin_bottom = 47.0
theme = SubResource( 9 )
text = "S'est fait éliminé en premier de la partie"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer"]
autoplay = "sceneFadeIn"
anims/sceneFadeIn = ExtResource( 20 )
